--- a/backend/package.json
+++ b/backend/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "description": "Proyecto FullStack de una agencia de viajes",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "start": "node src/index.js",
+    "start": "node src/index|.js",
     "dev": "nodemon src/"
   },
   "repository": {
@@ -36,7 +37,7 @@
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
-    "mysql2": "^3.6.5",
+    "mysql2": "^3.7.0",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "sequelize": "^6.35.2",
@@ -44,6 +45,7 @@
   },
   "devDependencies": {
     "colors": "^1.4.0",
-    "nodemon": "^3.0.2"
+    "nodemon": "^3.0.2",
+    "typescript": "^5.3.3"
   }
 }
